# graphene-django-practice

./: .gitignore  .pre-commit-config.yaml  db.sqlite3  pyproject.toml
cookbook/: schema.py  settings.py  urls.py
cookbook/ingredients/: schema.py
cookbook/ingredients/fixtures/: ingredients.json
cookbook/ingredients/migrations/: 0001_initial.py
